fix: margins, widths, & alignments

--- a/src/styles/circle.scss
+++ b/src/styles/circle.scss
@@ -97,7 +97,7 @@
 
 @media screen and (max-width: 1023px) and (min-width: 480px) {
   .hero-circles .circle-2 {
-    width: 60%;
+    width: 70%;
     right: -30vw;
     top: -30vw;
     z-index: 3;
