--- a/src/styles/projects.sass
+++ b/src/styles/projects.sass
@@ -96,7 +96,7 @@
   left: 30px
 
 .project-description
-  text-align: justify
+  text-align: left
   max-width: 820px
 
 .project-detail .center
